--- a/index.html
+++ b/index.html
@@ -3,17 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menyatakan Cinta</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Confess</title>
 </head>
 <body>
-
-<div class="container">
-    <h1>Selamat Datang</h1>
-    <p>Di sini aku ingin menyatakan sesuatu yang penting bagi saya:</p>
-    <p>Aku mencintaimu dengan segenap hatiku.</p>
-    <p>Semoga pesan ini membuatmu senang.</p>
-</div>
-
+    <div style="text-align: center; margin-top: 100px;">
+        <h1>Confess</h1>
+        <a href="halaman_selanjutnya.html"><button>Lanjutkan</button></a>
+    </div>
 </body>
 </html>
